--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,59 @@
     box-sizing: border-box;
 }
 body{
-    background-color: antiquewhite;
+    height: 100vh;
     font-family: 'Montserrat', sans-serif;
 }
-.box{
+
+/* MAIN */
+/* SEZIONE PRINCIPALE */
+.sezione-principale{
+    height: calc(100vh - 90px);
+    display: flex;
+    /* debug */
+    background-color: navy;
+}
+/*BARRA LATERALE*/
+.barra-laterale{
+    min-width: 230px;
+    height: 100%;
+    /* debug */
+    background-color: orange;
+}
+
+/*SEZIONE ALBUM*/
+.sezione-album{
     width: 100%;
-    height: 100px;
-    background-color: brown;
+    overflow-y: auto;
+}
+/* Header */
+header{
+    height: 90px;
+    background-color: cadetblue;
+    position: fixed;
+}
+
+/* SEZIONE PLAYER MUSICALE */
+.sezione-player{
+    height: 90px;
+    /* debug */
+    background-color: sienna;
+}
+
+
+/*DEBUG*/
+.box-debug{
+    margin: 0 auto;
+    margin: 1em;
+    width: 80%;
+    height: 80%;
+    border: 2px solid aqua;
+}
+
+.box-debug-main{
+    margin: 0 auto;
+    width: 80%;
+    height: 1000px;
+    border: 2px solid chocolate;
+    padding-top: 10em;
 }
