--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,34 +2,24 @@
 @media screen and (max-width:1100px) {
     /* Colonne */
     .col{
-        min-width: calc((100vw - 230px) / 4);
-        min-height: calc((100vw - 230px) / 4);
+        width: calc(100% / 4);
     }
 }
 /* S */
 @media screen and (max-width:700px) {
     /* Colonne */
     .col{
-        min-width: calc((100vw - 230px) / 2);
-        min-height: calc((100vw - 230px) / 2);
+        width: calc(100% / 2);
     }
 }
 /* XS */
 @media screen and (max-width:600px) {
     /* Sezione barra laterale */
     .barra-laterale{
-        min-width: 40px;
-    }
-    /* Sezione principale */
-    header{
-        width: calc(100% - 40px);
+        width: 40px;
     }
     /* Sezione album */
     .sezione-album{
         width: calc(100% - 40px);
-    }
-    .col{
-        min-width: calc((100vw - 40px) / 2);
-        min-height: calc((100vw - 40px) / 2);
     }
 }
