--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,29 @@
     box-sizing: border-box;
 }
 body{
-    height: 100vh;
     font-family: 'Montserrat', sans-serif;
+    background-color: black;
 }
-
+.wrapper{
+    height: 100vh;
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+}
 
 /* MAIN */
 
 /* SEZIONE PRINCIPALE */
 .sezione-principale{
-    height: calc(100vh - 90px);
+    height: calc(100% - 90px);
+    width: 100%;
     display: flex;
     /* debug */
     background-color: navy;
 }
 /*BARRA LATERALE*/
 .barra-laterale{
-    min-width: 230px;
+    width: 230px;
     height: 100%;
     /* debug */
     background-color: orange;
@@ -35,9 +41,12 @@ body{
 /* HEADER ALBUM*/
 header{
     height: 90px;
-    width: calc(100% - 230px);
+    width: calc(100%);
     background-color: cadetblue;
-    position: fixed;
+    position: sticky;
+    z-index: 10;
+    top: 0;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -61,8 +70,7 @@ header{
     flex-wrap: wrap;
 }
 .col{
-    min-width: calc((100vw - 230px) / 6);
-    min-height: calc((100vw - 230px) / 6);
+    width: calc(100% / 6);
     padding: 1em;
 }
 
