--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     max-width: 1600px;
     margin: 0 auto;
 }
+img{
+    max-width: 100%;
+}
 
 /* MAIN */
 
@@ -23,7 +26,7 @@ body{
     width: 100%;
     display: flex;
     /* debug */
-    background-color: navy;
+    background-color: #141922;
 }
 /*BARRA LATERALE*/
 .barra-laterale{
@@ -42,7 +45,7 @@ body{
 header{
     height: 90px;
     width: calc(100%);
-    background-color: cadetblue;
+    background-color: rgba(0, 0, 0, 0.5);
     position: sticky;
     z-index: 10;
     top: 0;
@@ -57,6 +60,7 @@ header{
     padding: 1em 3em;
     border-radius: 25px;
     font-size: 0.8rem;
+    font-weight: 500;
     color: white;
     text-decoration: none;
     text-transform: uppercase;
@@ -65,7 +69,7 @@ header{
 /* MAIN ALBUM*/
 /* Griglia */
 .riga{
-    padding-top: 10em;
+    padding: 1em;
     display: flex;
     flex-wrap: wrap;
 }
