--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,13 @@ ul{
     width: 200px;
     height: 100%;
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+/* Barra laterale main */
+.barra-laterale-main{
+    overflow-y: auto;
 }
 .logo{
     padding: 1em 2.5em 1em 1em;
@@ -134,6 +141,9 @@ ul{
     padding-bottom: 1em;
 }
 /* Barra laterale footer */
+.barra-laterale-footer{
+    z-index: 10;
+}
 .icona-download{
     width: 8%;
     vertical-align: middle;
