--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,6 @@ ul{
 .padding-verticale-2{
     padding: 2em 0em;
 }
-.padding-sinistra-1{
-    padding-left: 1em;
-}
 
 
 /* TIPOGRAFIA */
@@ -89,13 +86,12 @@ ul{
     overflow-y: auto;
 }
 .logo{
-    padding: 1em 2.5em 1em 1em;
+    padding: 1em 2.5em 1em 0em;
 }
 .barra-laterale ul{
     color: #6f6f6f;
     font-weight: 700;
     font-size: 0.8rem;
-    padding-left: 1em;
     padding-bottom: 2.5em;
 }
 .barra-laterale li{
@@ -114,11 +110,11 @@ ul{
 .barra-laterale h4{
     text-transform: uppercase;
     color: white;
-    padding-left: 1em;
 }
 /* 2 lista */
 .playlist{
     padding: 1em;
+    padding-left: 0em;
 }
 .playlist button{
     border-style: none;
@@ -130,7 +126,6 @@ ul{
     background-color: #a3a3a3;
 }
 .playlist a{
-    padding-left: 0.5em;
     vertical-align: middle;
     font-weight: 600;
 }
@@ -143,6 +138,9 @@ ul{
 /* Barra laterale footer */
 .barra-laterale-footer{
     z-index: 10;
+}
+.contenitore-a-scomparsa{
+    padding-left: 1em;  
 }
 .icona-download{
     width: 8%;
@@ -169,6 +167,30 @@ ul{
     font-size: 0.8em;
     vertical-align: middle;
 }
+/*Barra  laterale  responsive xs*/
+.barra-laterale-xs{
+    display: none;
+}
+.immagine-mini{
+    max-width: 100%;
+    padding: 0.3em;
+}
+i .immagine-mini{
+    opacity: 0.5;
+}
+.icona-download-xs{
+    width: 40%;
+    opacity: 0.5;
+    display: block;
+    margin: 1em auto;
+}
+.icona-utente-xs{
+    width: 30px;
+    height: 30px;
+    display: block;
+    margin: 1em auto;
+}
+
 
 /*SEZIONE ALBUM*/
 .sezione-album{
